Fixed the color for the horizontal scrollbar to better adjust to themes

--- a/home.css
+++ b/home.css
@@ -452,7 +452,7 @@ body{
 }
 #page-reader-scrollbar{
 
-    background-color: var(--dark-accent-color);
+    background-color: var(--fg-color);
     display: block;
     position: fixed;
     top: 0;
